# Agent-eye

./: .gitignore  Cargo.toml  README.md  setup.py  the-eyes.md
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/auth/: Cargo.toml
crates/capture/: Cargo.toml
crates/eye/: __init__.py  agent.py  cli.py  enhanced_capture.py
crates/eye/utils/: qwen_vision.py
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/transport/: Cargo.toml
install/: install.ps1  install.sh
