[package]
name = "eye-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "eye-agent"
path = "src/main.rs"

[dependencies]
capture = { path = "../capture" }
transport = { path = "../transport" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }